fix: nav menu visibility for small screen size

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,3 @@ body {
 :root {
     --app-shell-padding: 0
 }
-
-.mantine-AppShell-header {
-    height: 35px;
-}
